clusters/cluster0/kubernetes/apps/network-policies/policies/infra/rook-ceph.yaml
# Namespace: rook-ceph  (Ceph mon/osd/mgr/operator share label rook_cluster=rook-ceph)
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: default-deny
  namespace: rook-ceph
spec:
  endpointSelector: {}
  ingress: []
  egress: []
---
# Full intra-namespace mesh: mons/osds/mgr/mds/operator talk on many dynamic ports
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-intra-namespace
  namespace: rook-ceph
spec:
  endpointSelector: {}
  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: rook-ceph
  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: rook-ceph
---
# Ceph clients (RBD/CephFS) run on the nodes (host networking) + CSI plugins
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-node-and-csi-clients
  namespace: rook-ceph
spec:
  endpointSelector: {}
  ingress:
    - fromEntities:
        - host
        - remote-node
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-egress-infra
  namespace: rook-ceph
spec:
  endpointSelector: {}
  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s:k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
    - toEntities:
        - kube-apiserver
        - host
        - remote-node
---
# Ceph mgr dashboard exposed via HTTPRoute
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-ingress-from-gateway
  namespace: rook-ceph
spec:
  endpointSelector:
    matchLabels:
      rook_cluster: rook-ceph
  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: networking
            app.kubernetes.io/name: agentgateway
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-prometheus-scraping
  namespace: rook-ceph
spec:
  endpointSelector: {}
  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: observability
